--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ pillow==9.2.0
 whitenoise==6.2.0
 python-dotenv==0.21.0
 social-auth-app-django==5.0.0
+django-bootstrap-v5==1.0.11
+django-crispy-forms==1.14.0
