--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ python-dotenv==0.21.0
 social-auth-app-django==5.0.0
 django-bootstrap-v5==1.0.11
 django-crispy-forms==1.14.0
+importlib-metadata==4.12.0
