--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ social-auth-app-django==5.0.0
 django-bootstrap-v5==1.0.11
 django-crispy-forms==1.14.0
 importlib-metadata==4.12.0
+dj-database-url==1.0.0
