--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ django-crispy-forms==1.14.0
 importlib-metadata==4.12.0
 dj-database-url==1.0.0
 psycopg2==2.9.3
+boto3==1.24.88
+django-storages==1.13.1
